add GetAll endpoint
